# ozmav

./: ozmavWindows.sln  ozmavWindows.vcxproj  ozmavWindows.vcxproj.filters
zsaten/: CMakeLists.txt  __linux.c  __win32.c  __win32.h  editor.c  editor.h  globals.h  main.c  oz.c  render.c  render.h  zactors.c  zactors.h  zelda.c  zelda_ver.h  zold.c
zsaten/badrdp/: CMakeLists.txt  badrdp.h  combine.c  combine.h  crc.c  crc.h  dlparse.h  dump.c  dump.h  f3d.c  f3d.h  f3dex.c  f3dex.h  f3dex2.c  f3dex2.h  gbi.h  gdp.c  gdp.h  globals.h  gsp.c  gsp.h  macro.c  macro.h  macro_def.h  matrix.c  matrix.h  opengl.c  opengl.h  rdp.c  rdp.h
zsaten/binaries/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EditorDesign.txt  README.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  output.txt  strcat.txt  zSatenWindows.sln  zsaten.vcxproj  zsaten.vcxproj.filters
zsaten/binaries/badrdp/: badrdp.vcxproj  badrdp.vcxproj.filters  cmake_install.cmake
zsaten/binaries/misaka/: cmake_install.cmake  misaka.vcxproj  misaka.vcxproj.filters
zsaten/misaka/: CMakeLists.txt  misaka.h  msk_base.c  msk_base.h  msk_console.c  msk_console.h  msk_ui.c  msk_ui.h
